spade-tests/src/snapshots/spade_tests__ast_lowering__self_in_free_standing_function.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: 'self' can not be used in free standing units
  ┌─ testinput:1:6
  │
1 │ fn a(self) -> bool {true}
  │      ^^^^ not allowed here


